%% Mermaid ERD for Ruang Dengar
%% Use VS Code with Mermaid preview to render
erDiagram
  CustomUser {
    string email PK
    string nama_lengkap
    string username
    string role
    string nim
    string nidn
    string prodi
    string fakultas
    string status_pengguna
    int usia
    string no_whatsapp
    string email_pribadi
    bool is_profile_complete
    string profile_picture
    string nomor_telepon
    string alamat
    string nomor_telepon_kerabat
    bool is_active
    bool is_staff
    bool is_approved
    datetime admin_approval_date
  }

  Laporan {
    string kode PK
    string jenis
    text kronologi_singkat
    text deskripsi
    string lokasi
    url link_pelaporan
    string status
    text rekomendasi
    string ai_kategori
    string ai_urgency
    float ai_toxicity_score
    bool ai_needs_blur
    bool ai_analyzed
    bool is_anonim
    bool apakah_korban_langsung
    string hubungan_pelapor_korban
    string nama_korban
    string nim_nip_korban
    string status_korban
    string fakultas_korban
    string prodi_korban
    string jenis_kelamin_korban
    string jumlah_terlapor
    string nama_terlapor
    string nim_nip_terlapor
    string asal_instansi_terlapor
    string fakultas_terlapor
    string prodi_terlapor
    string no_wa_terlapor
    string hubungan_terlapor_korban
    text ciri_ciri_pelaku
    datetime created_at
    datetime updated_at
  }

  Evidence {
    int id PK
    string file
    datetime uploaded_at
    string keterangan
  }

  Progress {
    int id PK
    string status
    text catatan
    datetime tanggal
  }

  PelaporResponse {
    int id PK
    text pesan
    datetime tanggal
  }

  Booking {
    int id PK
    date tanggal
    time waktu
    string konselor
    string nama
    text topik
    string jenis
    string status
    text alasan_pembatalan
    string lokasi_konseling
    text catatan_admin
    datetime created_at
  }

  RekamMedisKonseling {
    int id PK
    int sesi_ke
    datetime tanggal_sesi
    string diagnosis_awal
    int mood_klien
    string risiko_bunuh_diri
    string risiko_self_harm
    text catatan_konselor
    text intervensi_diberikan
    text progress_notes
    text rencana_tindak_lanjut
    date sesi_selanjutnya
    string file_lampiran
    datetime created_at
    datetime updated_at
  }

  Counselor {
    int id PK
    string name
    string title
  }

  %% Relationships
  CustomUser ||--o{ Laporan : pelapor
  Laporan ||--o{ Evidence : evidences
  CustomUser ||--o{ Evidence : uploaded_by
  Laporan ||--o{ Progress : progress
  Progress |o--o{ PelaporResponse : progress
  Laporan ||--o{ PelaporResponse : pelapor_responses
  CustomUser ||--o{ Booking : user
  Counselor |o--o{ Booking : konselor_fk
  Booking ||--o{ RekamMedisKonseling : rekam_medis
  CustomUser |o--o{ RekamMedisKonseling : created_by
